# NeuralTryOn

./: .gitignore  Makefile  README.md  eval.py  main.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
app/: app.py
configs/: README.md  model_1_lightweight_unet.yaml  model_2_pix2pix.yaml  model_3_sd_lora.yaml  train.yaml
configs/data/: viton_hd.yaml
configs/experiments/: model_1_default.yaml  model_2_default.yaml  model_3_default.yaml
configs/models/: model_1_lightweight_unet.yaml  model_2_pix2pix.yaml  model_3_sd_lora.yaml
configs/tracking/: default.yaml
docs/: architecture.md  checkpoints.md  configuration_reference.md  dataset.md  evaluation_protocol.md  experiments.md  kaggle_operations.md  model_3_production_training.md  model_adapter_migration.md  production_architecture.md
evaluation/: README.md
evaluation/common_comparison/: 01_compare_reported_metrics.py  README.md
evaluation/model_1_lightweight_unet/: README.md  __init__.py  workflow.py
evaluation/model_2_pix2pix/: README.md  __init__.py  workflow.py
evaluation/model_3_sd_lora/: README.md  __init__.py  workflow.py
evaluation_cells/: README.md
evaluation_cells/model_3_sd_lora/: cell12_config.py  cell13_load_models.py  cell14_inference_fn.py  cell15_paired_test_metrics.py  cell16_export_paired_three_columns.py  (+3 more)
experiments/: README.md  hyperparameter_summary.csv  registry.csv
notebooks/: train-v2-2 (1).ipynb
results/: README.md  archive_image_manifest.md  notebook_image_manifest.md
results/metrics/: README.md  (+2 more)
scripts/: __init__.py  evaluate.py  infer.py  manage_experiment.py  train.py  vto.py
src/: __init__.py  artifacts.py  config.py  metrics.py  reproducibility.py  runtime.py  tracking.py  visualization.py
tests/: test_config.py  test_manifest.py  test_model_3_adapter.py  test_tracking.py  test_training_engine.py
(+80 files in other folders)
