[project]
name = "vto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "wandb>=0.27.0",
]
