[project]
name = "vto"
version = "0.1.0"
description = "Three-model Virtual Try-On deep learning project on VITON-HD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.34.2",
    "diffusers==0.30.3",
    "lpips>=0.1.4",
    "matplotlib>=3.8",
    "numpy==1.26.4",
    "opencv-python-headless==4.9.0.80",
    "pandas>=2.0",
    "peft==0.12.0",
    "pillow>=10.0",
    "scikit-image==0.24.0",
    "scipy==1.13.1",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.66",
    "transformers==4.44.2",
    "wandb>=0.17",
]
